// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline > it works with defaults 1`] = `
<ol
  class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-medium_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LendInvest
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-medium_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Golden Charter
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 1`] = `
<ol
  class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-small_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LendInvest
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-small_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-small_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-small_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Golden Charter
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 2`] = `
<ol
  class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-medium_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LendInvest
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-medium_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-medium_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-medium_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Golden Charter
        </a>
      </div>
    </div>
  </li>
</ol>
`;

exports[`Timeline > it works with sizes 3`] = `
<ol
  class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e"
  data-testid="Timeline"
>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-large_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4"
      data-testid="Box"
    >
      Apr 2021
       – 
      Present
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Senior Software Engineer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.lendinvest.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LendInvest
        </a>
      </div>
    </div>
  </li>
  <li
    class="_this_d62db4 _elevation-none_d62db4 _gutter-large_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4 _item_254c0f"
    data-testid="Box"
  >
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4"
      data-testid="Box"
    >
      Feb 2020
       – 
      Apr 2021
    </div>
    <div
      class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-large_d62db4 _meta_254c0f"
      data-testid="Box"
    >
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        Frontend Software Developer
      </div>
      <div
        class="_this_d62db4 _elevation-none_d62db4 _gutter-none_d62db4 _gutterX-none_d62db4 _gutterY-none_d62db4"
        data-testid="Box"
      >
        <a
          class="_this_b26e6e _size-large_b26e6e _family-body_b26e6e _weight-regular_b26e6e _this_a14c64 _urlTitle_254c0f"
          data-testid="Link"
          href="https://www.goldencharter.co.uk/"
          rel="noopener noreferrer"
          target="_blank"
        >
          Golden Charter
        </a>
      </div>
    </div>
  </li>
</ol>
`;
